# lob-regime-scanner

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  PROJECT_SPEC.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dashboard/: __init__.py  __main__.py  _constants.py  _mock_data.py  app.py  callbacks.py  pipeline.py
dashboard/assets/: styles.css
dashboard/components/: depth_surface.py  diagnostics.py  heatmap.py  regime_probs.py
data/: download.py  generate_realistic.py
docs/: methodology.md  results.md
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_hmm_fitting.ipynb  04_regime_analysis.ipynb
src/: __init__.py  backtest.py  book_reconstructor.py  data_loader.py  features.py  hmm_model.py
src/cpp/: __init__.py  bindings.cpp  lob_engine.cpp  lob_engine.hpp
tests/: test_book_reconstructor.py  test_cpp_engine.py  test_dashboard.py  test_data_loader.py  test_download.py  test_features.py  test_hmm.py
