[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "lob-regime-scanner"
version = "0.1.0"
description = "HMM-based market microstructure analytics for cryptocurrency order books"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "plotly>=5.18",
    "dash>=2.14",
    "hmmlearn>=0.3",
    "scikit-learn>=1.3",
    "flowrisk>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pybind11>=2.11",
]

[tool.setuptools.packages.find]
include = ["src*", "data*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
