[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "lob-regime-scanner"
version = "0.1.0"
description = "HMM-based market microstructure analytics for cryptocurrency order books"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "plotly>=5.18",
    "dash>=2.14",
    "dash-mantine-components>=2.0",
    "hmmlearn>=0.3",
    "scikit-learn>=1.3",
    "flowrisk>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pybind11>=2.11",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["src*", "data*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by formatter
    "SIM108",  # ternary operator — readability preference
    "RUF001",  # ambiguous unicode in strings (en-dash in messages)
    "RUF002",  # ambiguous unicode in docstrings (math symbols: ×, −)
    "RUF003",  # ambiguous unicode in comments (math symbols)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "dashboard", "data"]

